# automaton-gui

./: .gitignore  CMakeLists.txt  JUCECONFIG.md  README.md  lint.sh
.github/workflows/: ccpp.yml  remove-old-artifacts.yml
PlaygroundGUI/: CMakeLists.txt  PlaygroundGUI.jucer
PlaygroundGUI/Builds/LinuxMakefile/: Makefile
PlaygroundGUI/Builds/MacOSX/PlaygroundGUI.xcodeproj/: project.pbxproj
PlaygroundGUI/Builds/MacOSX/PlaygroundGUI.xcodeproj/xcshareddata/xcschemes/: PlaygroundGUI - App.xcscheme
PlaygroundGUI/Builds/VisualStudio2017/: PlaygroundGUI_App.vcxproj  PlaygroundGUI_App.vcxproj.filters
PlaygroundGUI/JuceLibraryCode/: AppConfig.h  BinaryData.cpp  BinaryData.h  JuceHeader.h
PlaygroundGUI/Resources/: default_config.json  king_automaton_abi.json
PlaygroundGUI/Source/: LoginComponent.cpp  LoginComponent.h  Main.cpp  MainComponent.cpp  MainComponent.h  Utils.cpp  Utils.h
PlaygroundGUI/Source/Components/: FormMaker.cpp  FormMaker.h  HistoricalChart.cpp  HistoricalChart.h  SlotsGrid.cpp  SlotsGrid.h  ValidatorGrid.cpp  ValidatorGrid.h
PlaygroundGUI/Source/Config/: Config.cpp  Config.h
PlaygroundGUI/Source/DEX/: DEXManager.cpp  DEXManager.h  DEXPage.cpp  DEXPage.h  Order.cpp  Order.h  OrdersManager.cpp  OrdersManager.h  OrdersModel.cpp  OrdersModel.h
PlaygroundGUI/Source/Data/: AutomatonContractData.cpp  AutomatonContractData.h  KingAutomatonABI.h
PlaygroundGUI/Source/Debug/: DebugPage.cpp  DebugPage.h
PlaygroundGUI/Source/Demos/: DemoGrid.cpp  DemoGrid.h  DemoMiner.cpp  DemoMiner.h  DemoSimNet.cpp  DemoSimNet.h
PlaygroundGUI/Source/Login/: Account.cpp  Account.h  AccountsModel.cpp  AccountsModel.h  LoginComponent.cpp  LoginComponent.h
PlaygroundGUI/Source/Miner/: Miner.cpp  Miner.h
PlaygroundGUI/Source/Models/: AbstractListModel.h  AbstractProxyModel.h
PlaygroundGUI/Source/Network/: NetworkView.cpp  NetworkView.h
PlaygroundGUI/Source/Proposals/: CreateProposalComponent.cpp  CreateProposalComponent.h  GridView.cpp  GridView.h  Proposal.cpp  Proposal.h  ProposalDetailsComponent.cpp  ProposalDetailsComponent.h  ProposalsActionsPage.cpp  ProposalsActionsPage.h  ProposalsManager.cpp  ProposalsManager.h  ProposalsModel.cpp  ProposalsModel.h  ProposalsPage.cpp  ProposalsPage.h
PlaygroundGUI/Source/Proposals/ModelsAndEntities/: AbstractListModel.h  AbstractProxyModel.h  Proposal.cpp  Proposal.h  ProposalsModel.cpp  ProposalsModel.h
PlaygroundGUI/Source/Utils/: AsyncTask.h  OwnedTasks.h  TasksManager.cpp  TasksManager.h  TasksOwner.h  TasksPanel.cpp  TasksPanel.h  Utils.cpp  Utils.h
PlaygroundGUI/cmake/: JUCE.cmake
